Updated frontend project and description dev
